data/derived/sp14/progs/unify/prog3373.ml.out
Characters 13-22:
  a = a + 1;;
  ^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
